--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Finance Website"
     />
-   
+   <link rel="stylesheet" href="./reset.css">
     <title>BumbleBee Finance</title>
   </head>
   <body>
