changes title of index.html

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,7 +10,7 @@
       content="Finance Website"
     />
    <link rel="stylesheet" href="./reset.css">
-    <title>BumbleBee Finance</title>
+    <title>NewBee Financial</title>
   </head>
   <body>
     
